--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -2,9 +2,38 @@
 
 /* Estilos gerais */
 body {
-    background-color: #f5f5f5;
+    
+    margin: 0;
+    padding: 0;
+    
 }
 
+.animated-bg {
+      background-image: url('/static/background_under.jpg'); /* Substitua pelo caminho da sua imagem */
+      height: 100vh;
+      background-size: cover;
+      background-repeat: repeat;
+      animation: moveBackground 100s linear infinite;
+    }
+
+@keyframes moveBackground {
+    from {
+    background-position: 0 0;
+    }
+    to {
+    background-position: 100% 100%;
+    }
+}
+
+.paperStyle {
+    background-image: url('/static/fundo.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color: #f0f0f000;
+}
+
+    
 .container-fluid {
     max-width: 1400px;
 }
