darkmode em paginas de personagens

--- a/src/templates/index_dynamic.html
+++ b/src/templates/index_dynamic.html
@@ -25,7 +25,12 @@
         <!-- Painel da Sessão -->
         <div class="card mb-4 ">
             <div class="card-header bg-dark text-white">
-                <h2 class="h4 mb-0">Painel da Sessão</h2>
+                <h2 class="h4 mb-0 text-center" >Painel da Sessão</h2>
+                <div class="text-end">
+                    <button id="toggleDarkModeBtn" class="btn btn-dark">
+                        <i class="bi bi-moon"></i> Modo Noturno
+                    </button>
+                </div>  
             </div>
             <div class="card-body">
                 <div class="row">
@@ -70,11 +75,7 @@
                             <i class="bi bi-moon-stars"></i> Descanso Longo
                         </button>
                     </div>
-                    <div class="text-end mb-3">
-                        <button id="toggleDarkModeBtn" class="btn btn-dark">
-                            <i class="bi bi-moon"></i> Modo Noturno
-                        </button>
-                    </div>
+                    
                 </div>
                 <div class="row mt-3">
                     <div class="col-12">
