--- a/src/templates/index_dynamic.html
+++ b/src/templates/index_dynamic.html
@@ -134,7 +134,7 @@
             <div class="col-lg-4 col-md-6 mb-4 ">
                 <div class="card character-card ">
                     <div class="card-header bg-{{ character.card_color }} text-{{ character.text_color|default('white') }} d-flex justify-content-between align-items-center">
-                        <h3 class="h5 mb-0"> {{ character.name }}</h3>
+                        <h3 class="h5 mb-0"> {{ character.name|replace('_', ' ')|regex_replace('([A-Z])', ' \\1')|title }}</h3>
                         <a href="{{ url_for('edit_character', character_id=character.id) }}" class="btn btn-sm btn-light">
                             <i class="bi bi-pencil-square"></i> Editar
                         </a>
