--- a/src/templates/index_dynamic.html
+++ b/src/templates/index_dynamic.html
@@ -65,16 +65,16 @@
                 </div>
                 <div class="row">
                     <div class="col-12 text-center">
-                        <button id="saveDataBtn" class="btn btn-success btn-lg me-2">
-                            <i class="bi bi-download"></i> Salvar Dados (Download)
+                        <button id="saveDataBtn" class="btn btn-success btn-lg me-2 ml-2 session-action-btn">
+                            <i class="bi bi-download"></i> Download
                         </button>
-                        <button id="newSessionBtn" class="btn btn-info btn-lg me-2">
+                        <button id="newSessionBtn" class="btn btn-info btn-lg me-2 ml-2 session-action-btn">
                             <i class="bi bi-plus-circle"></i> Iniciar Nova Sessão
                         </button>
-                        <button id="updateServerDataBtn" class="btn btn-primary btn-lg me-2">
-                            <i class="bi bi-cloud-upload"></i> Atualizar Dados (Servidor)
+                        <button id="updateServerDataBtn" class="btn btn-primary btn-lg me-2 ml-2 session-action-btn">
+                            <i class="bi bi-cloud-upload"></i> Atualizar Dados
                         </button>
-                        <button id="longRestBtn" class="btn btn-warning btn-lg">
+                        <button id="longRestBtn" class="btn btn-warning btn-lg me-2 ml-2 session-action-btn">
                             <i class="bi bi-moon-stars"></i> Descanso Longo
                         </button>
                     </div>
